examples/tests/compile_fail/invalid_array_type_syntax_fail.zl
fun main() >> i32 {
    mystery_type bad;
    return 0;
}
